"CARD_DETAILS_LABEL"                        = "Card Details";
"ENTER_CARD_DETAILS_HELP_LABEL"             = "Enter your card details starting with the card number.";
"VALID_CARD_ERROR_LABEL"                    = "You must provide a valid Card Number.";
"CARD_REQUIRED"                             = "Card number is required";
"CARD_INVALID"                              = "Card number is invalid";
"CARD_ICONS_LABEL"                          = "Supported card types";
"EXPIRATION_REQUIRED"                       = "Expiration date is required";
"EXPIRATION_INVALID"                        = "Expiration date is invalid";
"CVV_REQUIRED"                              = "%s is required";
...
"MOBILE_NUMBER_INVALID"                     = "Mobile number is invalid";
"ENROLLMENT_WITH_SMS_HELP_LABEL"            = "Enrollment may be required for this card. An SMS code will be sent to this number if required.";
"SMS_CODE_REQUIRED"                         = "SMS code is required";
"SMS_CODE_INVALID"                          = "SMS code is invalid";
"NOTICE_OF_COLLECTION"                      = "By paying with my card, I agree to the PayPal Privacy Statement.";

"CANCEL_ACTION"                             = "Cancel";
"RETRY_ACTION"                              = "Retry";
"CONTINUE_ACTION"                           = "Continue";
"ADD_CARD_ACTION"                           = "Add Card";
"DONE_ACTION"                               = "Done";
"EDIT_ACTION"                               = "Edit";
"NEXT_ACTION"                               = "Next";
"TOP_LEVEL_ERROR_ALERT_VIEW_OK_BUTTON_TEXT" = "OK";

"EDIT_PAYMENT_METHOD"                       = "Edit Payment Methods";
"THERE_WAS_AN_ERROR"                        = "Sorry, there was an error.";
"REVIEW_AND_TRY_AGAIN"                      = "Please review your information and try again.";
"CARD_ALREADY_EXISTS"                       = "This credit card already exists as a saved payment method.";
"INVALID_LABEL"                             = "Invalid:";

"YEAR_LABEL"                                = "Year";
"MONTH_LABEL"                               = "Month";

"OTHER_LABEL"                               = "Other";
"CREDIT_OR_DEBIT_CARD_LABEL"                = "Credit or Debit Card";
"RECENT_LABEL"                              = "Recent";
"SELECT_PAYMENT_LABEL"                      = "Select Payment Method";

"CONFIRM_ENROLLMENT_LABEL"                  = "Confirm Enrollment";
"CONFIRM_ACTION"                            = "Confirm";
"ENTER_SMS_CODE_SENT_HELP_LABEL"            = "Enter the SMS code sent to %s";
"SMS_CODE_LABEL"                            = "SMS Code";
"CARD_TYPE_GENERIC_CARD"                    = "Card";
"MOBILE_COUNTRY_CODE_LABEL"                 = "Country Code";
"SECURITY_CODE_LABEL"                       = "Security Code";
"CVV_FIELD_PLACEHOLDER"                     = "CVV";
"CVC_FIELD_PLACEHOLDER"                     = "CVC";
"CID_FIELD_PLACEHOLDER"                     = "CID";
"CVN_FIELD_PLACEHOLDER"                     = "CVN";
"POSTAL_CODE_PLACEHOLDER"                   = "12345";
"MOBILE_NUMBER_LABEL"                       = "Mobile Number";
"MOBILE_NUMBER_PLACEHOLDER"                 = "123 456 7890";
"EXPIRATION_DATE_LABEL"                     = "Expiration Date";
"CARD_NUMBER_PLACEHOLDER"                   = "Card Number";
"EXPIRY_PLACEHOLDER_FOUR_DIGIT_YEAR"        = "MM / YYYY";
"EXPIRY_PLACEHOLDER_TWO_DIGIT_YEAR"         = "MM / YY";
"CARDHOLDER_NAME_LABEL"                     = "Cardholder Name";
"SAVE_CARD_LABEL"                           = "Save card";

"PAYPAL"                                    = "PayPal";
"CARD_TYPE_AMERICAN_EXPRESS"                = "American Express";
"CARD_TYPE_DISCOVER"                        = "Discover";
"CARD_TYPE_DINERS_CLUB"                     = "Diners Club";
"CARD_TYPE_MASTER_CARD"                     = "MasterCard";
"CARD_TYPE_VISA"                            = "Visa";
"CARD_TYPE_JCB"                             = "JCB";
"CARD_TYPE_MAESTRO"                         = "Maestro";
"CARD_TYPE_UNION_PAY"                       = "UnionPay";
"CARD_TYPE_HIPER"                           = "Hiper";
"CARD_TYPE_HIPERCARD"                       = "Hipercard";
"BRANDING_VENMO"                            = "Venmo";
"BRANDING_APPLE_PAY"                        = "Apple Pay";
"BRANDING_ANDROID_PAY"                      = "Android Pay‏";
"USE_DIFFERENT_PHONE_NUMBER_ACTION"         = "Use a different phone number";
"CARD_NOT_ACCEPTED_ERROR_LABEL"             = "Card not accepted";

