...
        [self.dropInButton setTitle:NSLocalizedString(@"Change Payment Method", nil) forState:UIControlStateNormal];
        self.purchaseButton.backgroundColor = self.view.tintColor;
        self.purchaseButton.enabled = YES;
    } else {
        [newConstraints addObjectsFromArray:[NSLayoutConstraint constraintsWithVisualFormat:@"V:[paymentMethodHeaderLabel]-[dropInButton]" options:0 metrics:nil views:viewBindings]];
        [newConstraints addObjectsFromArray:[NSLayoutConstraint constraintsWithVisualFormat:@"H:|-[dropInButton]-|" options:0 metrics:nil views:viewBindings]];
        [self.dropInButton setTitle:NSLocalizedString(@"Add Payment Method", nil) forState:UIControlStateNormal];
        self.purchaseButton.backgroundColor = self.secondaryLabelColor;
        self.purchaseButton.enabled = NO;
    }
    [newConstraints addObjectsFromArray:[NSLayoutConstraint constraintsWithVisualFormat:@"V:[dropInButton]-(20)-[purchaseButton]-(20)-[colorSchemeLabel]-[colorSchemeSegmentedControl]" options:0 metrics:nil views:viewBindings]];
    [newConstraints addObjectsFromArray:[NSLayoutConstraint constraintsWithVisualFormat:@"H:|-[colorSchemeSegmentedControl]-|" options:0 metrics:nil views:viewBindings]];
    
...
                                                                                     NSError * _Nullable error) {
                                                                               
                                                                               if (error) {
                                                                                   self.progressBlock([NSString stringWithFormat:@"Error: %@", error.localizedDescription]);
                                                                                   NSLog(@"Error: %@", error);
                                                                               } else if (result.isCancelled) {
                                                                                   self.progressBlock(@"Cancelled🎲");
                                                                               } else if (result.paymentOptionType == BTUIKPaymentOptionTypeApplePay) {
                                                                                   self.progressBlock(@"Ready for checkout...");
                                                                                   [self setupApplePay];
                                                                               } else {
                                                                                   self.useApplePay = NO;
                                                                                   self.selectedNonce = result.paymentMethod;
...
